<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NUSFoodieActivity!</string>
    <string name="app_name">NUS Foodie</string>

    <string name="search">Search</string>
    <string name="directory">Directory</string>
    <string name="crowd">Crowd</string>
    <string name="nearby">Nearby</string>
    
    <string name="menu">Menu</string>
    <string name="view">View</string>
    <string name="review">Review</string>
    
    <string name="fac_spinner_prompt">Choose a Faculty</string>
    <string name="store_spinner_prompt">Choose a Store Type</string>
    <string name="cuisine_spinner_prompt">Choose a Cuisine</string>
    
    <string name="store_info">Store Information</string>
    
    
    <string name="cd">College Dining App</string>
    <string name="cd_sitting">Sitting Area</string>
    <string name="cd_asian">Asian Cuisine</string>
    <string name="cd_diy">DIY Station</string>
    <string name="cd_western">Western</string>

</resources>
