<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fecbca"
    android:weightSum="100" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp" 
        android:layout_weight="40">

        <ImageView
            android:id="@+id/iv_linus_logo"
            android:layout_width="202dp"
            android:layout_height="245dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/linus_icon"/>
            
        <Button
	        android:id="@+id/b_main_rand"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="202dp"
	        android:layout_height="245dp"
	        android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:text=""/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_weight="60"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/b_main_search"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:paddingTop="15dp"
            android:drawableTop="@drawable/search"
            android:text="@string/search"/>

        <Button
            android:id="@+id/b_main_dir"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingTop="15dp"
            android:drawableTop="@drawable/directory"
            android:text="@string/directory" />
        
        <Button
            android:id="@+id/b_main_crowd"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:paddingTop="15dp"
            android:drawableTop="@drawable/crowd"
            android:text="@string/crowd" />

        <Button
            android:id="@+id/b_main_nearby"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingTop="15dp"
            android:drawableTop="@drawable/local"
            android:text="@string/nearby"  />

    </RelativeLayout>

</LinearLayout>